# busca-semantica-langchain-postgres

./: .env_example  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
src/: chat.py  ingest.py  search.py
