[project]
name = "busca-semantica-langchain-postgres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.7",
    "langchain-postgres>=0.0.16",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.11",
    "pypdf>=6.6.1",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.12.0",
]
